<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-55dp">

    <TextView
        android:id="@+id/battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rover_battery_percentage"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/wifi_status"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battery" />

    <TextView
        android:id="@+id/accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degreeTV" />

    <TextView
        android:id="@+id/acc_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="X:2.45\nY:-6.5\nZ:3.5"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/accelerometer"
        app:layout_constraintTop_toBottomOf="@+id/accelerometer" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/gps_location"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light" />

    <TextView
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/light"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc_values" />

    <TextView
        android:id="@+id/lat_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Latitude:23.524523\nLongitude:43.123423"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/location"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/ambientTemp"
        app:layout_constraintTop_toBottomOf="@+id/ambientTemp" />

    <TextView
        android:id="@+id/ambientTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambient_temp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi" />

    <TextView
        android:id="@+id/relativeHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_humidity"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />


    <Button
        android:id="@+id/start_mission_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorAccent"
        android:text="Start New Mission"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="0.1"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Status:"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/battery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bluetoothStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_weight="0.9"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/battery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="122dp"
        android:layout_height="16dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/deviceLabel"
        android:text="@string/no_device"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bluetoothStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degreeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Compass"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/relativeHumidity"
        app:layout_constraintTop_toBottomOf="@+id/relativeHumidity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listMessage"
        android:layout_width="399dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toTopOf="@+id/start_mission_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_lng"
        app:layout_constraintVertical_bias="0.093" />

</androidx.constraintlayout.widget.ConstraintLayout>